--- a/index.html
+++ b/index.html
@@ -39,29 +39,29 @@
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example Use:</h3>
 
-<code>
+<pre>
     BanglaDate banglaDate = BanglaDate.now();
     System.out.println(banglaDate);
     System.out.println(banglaDate.getBanglaDay());
     System.out.println(banglaDate.getBanglaMonth());
     System.out.println(banglaDate.getBanglaYear());
     System.out.println(banglaDate.getBanglaMonthValue());
-</code>
+</pre>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Output:</h3>
-<code>
+<pre>
 	২৬-কার্তিক-১৪২৩
 	২৬
 	কার্তিক
 	১৪২৩
 	১০
-</code>
+</pre>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Maven:</h3>
 
-<code>
+<pre>
 	<project>
 ...................
     <repositories>
@@ -79,7 +79,7 @@
     </dependencies>
 ...............
 <project>
-</code>
+</pre>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
