--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/shahriar-io/jbangladate">View on GitHub</a>
 
           <h1 id="project_title">Jbangladate</h1>
-          <h2 id="project_tagline">This is a Bangla data representation in java.</h2>
+          <h2 id="project_tagline">This is a Bangla date representation in java.</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/shahriar-io/jbangladate/zipball/master">Download this project as a .zip file</a>
