--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://github.com/shahriar-io/jbangladate">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Having trouble with Pages? Check out our <a href="https://github.com/shahriar-io/jbangladate">documentation</a> and we’ll help you sort it out.</p>
       </section>
     </div>
 
